update time series section, probability review added KL divergence, entropy mutual information, math stats added clt delta method transformations of rv

--- a/Mathematical_Statistics/Mathematical Statistics.ipynb
+++ b/Mathematical_Statistics/Mathematical Statistics.ipynb
@@ -244,6 +244,92 @@
    "metadata": {
     "collapsed": false
    }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Delta Method\n",
+    "\n",
+    "recall if $\\sqrt{n}(y_n-\\theta)\\sim \\mathbb{N}(0,\\sigma^2 \\implies y_n-\\theta \\sim \\mathbb{N}(0, \\frac{\\sigma^2}{n})$\n",
+    "\n",
+    "let $y_n$ be a rv that satisfies $\\sqrt{n}(y_n-\\theta) \\overset{D}{\\to}\\mathbb{N}(0,\\sigma^2$ then for a given function $g$ if $g(\\theta)$ exists and is not $0$\n",
+    "\n",
+    "$$\\sqrt{n} \\left[g(y_n)-g(\\theta)\\right] \\overset{d}{\\to} \\mathbb{N}(o, (g^\\prime(\\theta))^2\\sigma^2)$$"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Moment Generating Function\n",
+    "\n",
+    "the mfg for a rv $x$\n",
+    "\\begin{align}\n",
+    "M_x(0)&=1\\\\\n",
+    "M^\\prime_x(0)&=E[x]\\\\\n",
+    "M^{\\prime \\prime}_x(0)&=E[x^2]\n",
+    "\\end{align}\n",
+    "\n",
+    "mfg of a $mathbb{N}(0,1)$\n",
+    "\n",
+    "$$M_z(t)=e^{\\frac{t^2}{2}}$$"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "fact\n",
+    "\n",
+    "$$\\frac{\\sum_{i=1}^nx_i-n\\mu}{\\sqrt{n}\\sigma}=\\frac{\\sum(x_i-\\mu)}{\\sqrt{n}\\sigma}=\\frac{\\sqrt{n}(\\bar{x}-\\mu)}{\\sigma}$$"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Central Limit Theorem\n",
+    "\n",
+    "suppose $x_1\\cdots,x_n$ are iid with mean $\\mu$ and variance $\\sigma^2<\\inf$ then\n",
+    "\n",
+    "$$y_n=\\frac{\\sum(x_i-\\mu)}{\\sigma\\sqrt{n}} \\overset{d}{\\to}\\mathbb{N}(0,1)$$\n",
+    "\n",
+    "proof through MGF\n",
+    "\n",
+    "for large $n$,  $\\bar{x}\\sim \\mathbb{N}(\\mu,\\frac{\\sigma^2}{n})$"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Confidence Intervals\n",
+    "\n",
+    "a $100(1-\\alpha$ ci for $\\theta$ is a pair of rv $t_L,t_u$ st\n",
+    "\n",
+    "$$p(t_l<\\theta < t_u)=1-\\alpha$$\n",
+    "\n",
+    "eg by students theorem $\\frac{\\bar{x}-\\mu}{\\frac{s}{\\sqrt{n}}} \\sim T_{n-1}$\n",
+    "\n",
+    "$$p(-t < \\frac{\\bar{x}-\\mu}{\\frac{s}{\\sqrt{n}}} <t)$$ solve for $\\mu$ in the middle and you get\n",
+    "\n",
+    "$$\\bar{x} \\pm t_{\\frac{\\alpha}{2}, n-1}\\frac{s}{\\sqrt{n}}$$\n",
+    "\n",
+    "for $\\sigma^2$\n",
+    "\n",
+    "$$\\frac{(n-1)s^2}{\\sigma^2} \\sim \\chi^2_u$$ by students theorem\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
