--- a/Probability_and_Distributions/Probability Review.ipynb
+++ b/Probability_and_Distributions/Probability Review.ipynb
@@ -111,9 +111,13 @@
     "\n",
     "let $f$ be a function that maps $\\mathbb{R}^n$ to $\\mathbb{R}^n$ and let $y=f(x)$ than its jabobian matrix $J$ is given by\n",
     "\n",
-    "$$J_{x\\to y} \\triangleq \\frac{\\partial(y_y, \\cdots ,y_n)}{\\partial{(x_1, \\cdots , x_n)}} \\triangleq$$\n",
+    "$$J_{x\\to y} \\triangleq \\frac{\\partial(y_y, \\cdots ,y_n)}{\\partial{(x_1, \\cdots , x_n)}} \\triangleq \\begin{bmatrix}\\frac{\\partial y_1}{\\partial x_1} & \\cdots & \\frac{\\partial y_1}{\\partial x_n}\\\\ \\vdots & \\ddots & \\vdots\\\\ \\frac{\\partial y_n}{\\partial x_1} & \\cdots & \\frac{\\partial y_n}{\\partial x_n}  \\end{bmatrix}$$\n",
     "\n",
-    "# todo bmatrix has issues in jupyter\n",
+    "if $f$ is an invertible mapping\n",
+    "\n",
+    "$$p_y(y)=p_x(x)|detJ_{y \\to c}|$$\n",
+    "\n",
+    "\n",
     "\n"
    ],
    "metadata": {
@@ -127,7 +131,9 @@
     "\n",
     "the entropy of a rv $X$ with distribution $p$ denoted $\\mathbb{H}(X)$ for a discrete distribution with $K$ states\n",
     "\n",
-    "$$\\mathbb{H}(X) \\triangleq -\\sum_{k=1}^K p(X=k)log_2p(X=k)$$"
+    "$$\\mathbb{H}(X) \\triangleq -\\sum_{k=1}^K p(X=k)log_2p(X=k)$$\n",
+    "\n",
+    "the discrete distribution with maximum entropy is the uniform distribution"
    ],
    "metadata": {
     "collapsed": false
@@ -138,7 +144,35 @@
    "source": [
     "## Kullback-Leibler Divergence\n",
     "\n",
-    "\n"
+    "aka relative entropy\n",
+    "\n",
+    "$$\\mathbb{KL}(p||q) \\triangleq \\sum_{k=1}^Kp_klog\\frac{p_k}{q_k} = -\\mathbb{H}(p) + \\mathbb{H}(p,q)$$\n",
+    "\n",
+    "where $\\mathbb{H}(p,q) \\triangleq -\\sum_{k}p_klog(q_k)$ is the cross entropy\n",
+    "\n",
+    "theorem: $\\mathbb{KL}(p||q)  \\geq 0$ with equality iff $p=q$ proof involves jensens inequality\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Mutual Information\n",
+    "\n",
+    "let $x,y$ be random variables we want to determine how similar $p(y,x$ is to the factored distribution $p(x)p(y)$\n",
+    "\n",
+    "$$\\mathbb{I}(x;y) \\triangleq \\mathbb{KL}(p(x,y)||p(x)p(y)) =\\mathbb{H}(y)-\\mathbb{H}(y|x)= \\sum_x\\sum_yp(x,y)log\\frac{p(x,y)}{p(x)p(y)}$$\n",
+    "\n",
+    "\n",
+    "MI = 0 if variables are independent\n",
+    "\n",
+    "### pointwise mutual information\n",
+    "\n",
+    "$$PMI(x,y) \\triangle log\\frac{p(x,y)}{p(x)p(y)} = log \\frac{p(y|x)}{p(y)}$$\n",
+    "\n",
+    "we can rewrite this $PMI(x,y) = log \\frac{p(y|x)}{p(y)}$ this is the amount we learn from updating the prior $p(x)$ to the posterior $p(x|y)"
    ],
    "metadata": {
     "collapsed": false
