added Stationarity test

--- a/Mathematical_Statistics/Mathematical Statistics.ipynb
+++ b/Mathematical_Statistics/Mathematical Statistics.ipynb
@@ -313,7 +313,7 @@
    "source": [
     "## Confidence Intervals\n",
     "\n",
-    "a $100(1-\\alpha$ ci for $\\theta$ is a pair of rv $t_L,t_u$ st\n",
+    "a $100(1-\\alpha)$ ci for $\\theta$ is a pair of rv $t_l,t_u$ st\n",
     "\n",
     "$$p(t_l<\\theta < t_u)=1-\\alpha$$\n",
     "\n",
