fractionally differentiated features

--- a/Time_Series/Stationarity.ipynb
+++ b/Time_Series/Stationarity.ipynb
@@ -157,6 +157,142 @@
      "name": "#%%\n"
     }
    }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Fractionally Differentiated Features\n",
+    "\n",
+    "let $B$ be the backshift operator applied to matrix of real valued features $\\{X\\}$ where $B^kX_t=X_{t-1}$ for any $k\\geq 0$  EG $(1-B)^2=1-2B+B^2$ where $B^2X_t==X_{t-2}$ so that $(1-B)^2=X_t-2X_{t-1}+X_{t-2}\n",
+    "\n",
+    "note that $(x+y)^n=\\sum_{k=0}^n {n \\choose{k}}x^ky^{n-k}$ for a real number $d$ $(2+x)^d=\\sum_{k=0}^\\inf{d \\choose{k}}x^k$ the binomial series\n",
+    "\n",
+    "in the fractional model $d$ can be a real number with the following binomial expansion\n",
+    "\n",
+    "\\begin{align}\n",
+    "(1-b)^D=\\sum_{K=O}^\\inf {d \\choose{k}}(-B)^k &=\\sum_{k=0}^\\inf\\frac{\\prod_{i=1}^{k-1}(d-i)}{k!}(-B)^k\\\\\n",
+    "&=1-db+\\frac{d(d-1)}{2!}B^2-\\frac{d(d-1)(d-2)}{3!}B^3+\\cdots \\\\\n",
+    "\\end{align}\n",
+    "\n",
+    "the arithmatic series consists\n",
+    "\n",
+    "$$X_t=\\sum_{k=0}^\\inf \\omega_k X_{t-k}$$ where\n",
+    "\n",
+    "$$\\omega = \\left\\{1,-d, \\frac{d(d-1)}{2!},-\\frac{d(d-1)(d-2)}{3!}, \\cdots (-1)^k\\prod_{i=0}^{k-1}\\frac{d-i}{k!}\\right \\}$$\n",
+    "\n",
+    "when $d$ is a positive integer memoory beyond $k>d$ is gone\n",
+    "\n",
+    "weights are generated iteratively $\\omega_k-\\omega_{k-1}\\frac{d-k+1}{k}$"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/brandon/anaconda3/envs/minerva/lib/python3.7/site-packages/ipykernel_launcher.py:24: DeprecationWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
+      "/home/brandon/anaconda3/envs/minerva/lib/python3.7/site-packages/ipykernel_launcher.py:24: DeprecationWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
+      "/home/brandon/anaconda3/envs/minerva/lib/python3.7/site-packages/ipykernel_launcher.py:24: DeprecationWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
+      "/home/brandon/anaconda3/envs/minerva/lib/python3.7/site-packages/ipykernel_launcher.py:24: DeprecationWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
+      "/home/brandon/anaconda3/envs/minerva/lib/python3.7/site-packages/ipykernel_launcher.py:24: DeprecationWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
+      "/home/brandon/anaconda3/envs/minerva/lib/python3.7/site-packages/ipykernel_launcher.py:24: DeprecationWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
+      "/home/brandon/anaconda3/envs/minerva/lib/python3.7/site-packages/ipykernel_launcher.py:24: DeprecationWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
+      "/home/brandon/anaconda3/envs/minerva/lib/python3.7/site-packages/ipykernel_launcher.py:24: DeprecationWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
+      "/home/brandon/anaconda3/envs/minerva/lib/python3.7/site-packages/ipykernel_launcher.py:24: DeprecationWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
+      "/home/brandon/anaconda3/envs/minerva/lib/python3.7/site-packages/ipykernel_launcher.py:24: DeprecationWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
+      "/home/brandon/anaconda3/envs/minerva/lib/python3.7/site-packages/ipykernel_launcher.py:24: DeprecationWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
+      "/home/brandon/anaconda3/envs/minerva/lib/python3.7/site-packages/ipykernel_launcher.py:24: DeprecationWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
+      "/home/brandon/anaconda3/envs/minerva/lib/python3.7/site-packages/ipykernel_launcher.py:24: DeprecationWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
+      "/home/brandon/anaconda3/envs/minerva/lib/python3.7/site-packages/ipykernel_launcher.py:24: DeprecationWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
+      "/home/brandon/anaconda3/envs/minerva/lib/python3.7/site-packages/ipykernel_launcher.py:24: DeprecationWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
+      "/home/brandon/anaconda3/envs/minerva/lib/python3.7/site-packages/ipykernel_launcher.py:24: DeprecationWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
+      "/home/brandon/anaconda3/envs/minerva/lib/python3.7/site-packages/ipykernel_launcher.py:24: DeprecationWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
+      "/home/brandon/anaconda3/envs/minerva/lib/python3.7/site-packages/ipykernel_launcher.py:24: DeprecationWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
+      "/home/brandon/anaconda3/envs/minerva/lib/python3.7/site-packages/ipykernel_launcher.py:24: DeprecationWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
+      "/home/brandon/anaconda3/envs/minerva/lib/python3.7/site-packages/ipykernel_launcher.py:24: DeprecationWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
+      "/home/brandon/anaconda3/envs/minerva/lib/python3.7/site-packages/ipykernel_launcher.py:24: DeprecationWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
+      "/home/brandon/anaconda3/envs/minerva/lib/python3.7/site-packages/ipykernel_launcher.py:24: DeprecationWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
+      "/home/brandon/anaconda3/envs/minerva/lib/python3.7/site-packages/ipykernel_launcher.py:24: DeprecationWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
+      "/home/brandon/anaconda3/envs/minerva/lib/python3.7/site-packages/ipykernel_launcher.py:24: DeprecationWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
+      "/home/brandon/anaconda3/envs/minerva/lib/python3.7/site-packages/ipykernel_launcher.py:24: DeprecationWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
+      "/home/brandon/anaconda3/envs/minerva/lib/python3.7/site-packages/ipykernel_launcher.py:24: DeprecationWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
+      "/home/brandon/anaconda3/envs/minerva/lib/python3.7/site-packages/ipykernel_launcher.py:24: DeprecationWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "(                     bidprice\n 2020-06-18 13:30:44      0.69\n 2020-06-17 14:15:44      1.86\n 2020-06-16 20:45:44     -1.85\n 2020-06-17 17:40:44      2.81\n 2020-06-18 20:15:44     -3.38\n ...                       ...\n 2020-07-17 20:30:45     -0.10\n 2020-07-17 20:40:45      0.01\n 2020-07-17 20:45:45      0.12\n 2020-07-17 20:50:45      0.00\n 2020-07-17 20:55:45      0.10\n \n [1542 rows x 1 columns],\n             adfStat  pVal  lags    nObs    95% CI\n 0.000000   6.909780   1.0   1.0  1542.0 -2.863416\n 0.095238   7.987021   1.0   1.0  1541.0 -2.863417\n 0.190476  10.212879   1.0   1.0  1540.0 -2.863419\n 0.285714  13.661658   1.0   1.0  1539.0 -2.863420\n 0.380952  17.419700   1.0   1.0  1539.0 -2.863420\n 0.476190  22.146521   1.0   1.0  1539.0 -2.863420\n 0.571429  27.516400   1.0   1.0  1539.0 -2.863420\n 0.666667  30.472787   1.0   1.0  1540.0 -2.863419\n 0.761905  33.987451   1.0   1.0  1540.0 -2.863419\n 0.857143  29.196734   1.0   1.0  1540.0 -2.863419\n 0.952381  20.505995   1.0   1.0  1541.0 -2.863417\n 1.047619  19.797309   1.0   1.0  1541.0 -2.863417\n 1.142857  24.641549   1.0   1.0  1540.0 -2.863419\n 1.238095  32.166184   1.0   1.0  1540.0 -2.863419\n 1.333333  35.955663   1.0   1.0  1540.0 -2.863419\n 1.428571  25.588011   1.0   1.0  1539.0 -2.863420\n 1.523810  24.463714   1.0   1.0  1539.0 -2.863420\n 1.619048  21.749698   1.0   1.0  1539.0 -2.863420\n 1.714286  17.587906   1.0   1.0  1539.0 -2.863420\n 1.809524  28.124308   1.0   1.0  1540.0 -2.863419\n 1.904762  16.522373   1.0   1.0  1540.0 -2.863419\n 2.000000 -39.845732   0.0   1.0  1540.0 -2.863419,\n 2.0)"
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from statsmodels.tsa.stattools import adfuller\n",
+    "import pandas as pd\n",
+    "import matplotlib\n",
+    "%matplotlib inline\n",
+    "aapl = pd.read_csv('apple.csv', index_col=0, usecols=['time','bidprice'])\n",
+    "aaplcumsum = aapl.cumsum()\n",
+    "\n",
+    "\n",
+    "def getWeights_FFD(d,thres):\n",
+    "    w,k=[1.],1\n",
+    "    while True:\n",
+    "        w_=-w[-1]/k*(d-k+1)\n",
+    "        if abs(w_)<thres:\n",
+    "            break\n",
+    "        w.append(w_)\n",
+    "        k+=1\n",
+    "    return np.array(w[::-1]).reshape(-1,1)\n",
+    "\n",
+    "def frac_diff_FFD(series, d, thres=1e-5):\n",
+    "    w =getWeights_FFD(d,thres)\n",
+    "    width,df = len(w)-1,{}\n",
+    "    for name in series.columns:\n",
+    "        seriesF,df_=series[[name]].fillna(method='ffill').dropna(), pd.Series()\n",
+    "        for iloc1 in range(width, seriesF.shape[0]):\n",
+    "            loc0, loc1 = seriesF.index[iloc1-width], seriesF.index[iloc1]\n",
+    "            if not np.isfinite(series.loc[loc1,name]): #exclude na\n",
+    "                continue\n",
+    "            df_[loc1]=np.dot(w.T,seriesF.loc[loc0:loc1])[0,0]\n",
+    "        df[name]=df_.copy(deep=True)\n",
+    "    df = pd.concat(df,axis=1)\n",
+    "    return df\n",
+    "\n",
+    "def min_d_that_passes_ADF(series, thres=0.05):\n",
+    "\n",
+    "    out = pd.DataFrame(columns=['adfStat','pVal','lags','nObs','95% CI'])\n",
+    "    for d in np.linspace(0,2,22):\n",
+    "        df1=np.log(series)\n",
+    "        df2 = frac_diff_FFD(series,d,thres=0.05)\n",
+    "        adf = adfuller(df2, maxlag=1, regression='c', autolag=None)\n",
+    "        out.loc[d]=list(adf[:4]) + [adf[4]['5%']]\n",
+    "        if adf[1]<=thres:\n",
+    "            return df2, out, d\n",
+    "    return 'no values satisfied adf'\n",
+    "\n",
+    "\n",
+    "ffd_1, out_1, d_1 = min_d_that_passes_ADF(aapl)\n",
+    "\n",
+    "#from this we can pass the adf test with a fractional differnce of 0.3\n",
+    "\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
