refactor, add to moment generating function

--- a/Mathematical_Statistics/Mathematical Statistics.ipynb
+++ b/Mathematical_Statistics/Mathematical Statistics.ipynb
@@ -265,12 +265,31 @@
    "source": [
     "## Moment Generating Function\n",
     "\n",
+    "$$M_x(t)=E[e^{tx}]$$ if expected value exists $\\forall \\; t$ in the interval $-h<t<h$ for some $h>0$\n",
+    "\n",
+    "1. suppose mgf of $x$ exists then\n",
+    "\n",
+    "$$E(x^r)=M_x^r(0)$$ where $M_x^r$ is the $r^{th}$ derivative of $M_x^(t)$ evaluated at 0\n",
+    "\n",
+    "2.\n",
+    "\n",
+    "$$M_x(t)=1+\\sum_{r=1}^\\inf\\frac{E[x^r}{r!}t^r$$\n",
+    "\n",
+    "3. if $y=ax+b$\n",
+    "\n",
+    "$$M_y(t)=e^{bt}M_x(at)$$\n",
+    "\n",
+    "4. every mgf has a unique distribution if it exists\n",
+    "\n",
     "the mfg for a rv $x$\n",
     "\\begin{align}\n",
     "M_x(0)&=1\\\\\n",
     "M^\\prime_x(0)&=E[x]\\\\\n",
     "M^{\\prime \\prime}_x(0)&=E[x^2]\n",
     "\\end{align}\n",
+    "\n",
+    "if $x$ is a rv the moment generating function is :\n",
+    "\n",
     "\n",
     "mfg of a $mathbb{N}(0,1)$\n",
     "\n",
