add ref to some things in prob review, and math on VAE

--- a/Probability_and_Distributions/Probability Review.ipynb
+++ b/Probability_and_Distributions/Probability Review.ipynb
@@ -37,6 +37,7 @@
   {
    "cell_type": "markdown",
    "source": [
+    "(Bayes-Rule)=\n",
     "## Bayes Rule\n",
     "\n",
     "$$p(X=x|Y=y)=\\frac{p(X=x)p(Y=y)}{p(Y=y)})=\\frac{p(X=x)pY=y|X=x)}{\\sum_{x^\\prime{}}p(X=x^\\prime)p(Y=y|X=x^\\prime)} $$\n"
@@ -116,8 +117,6 @@
     "if $f$ is an invertible mapping\n",
     "\n",
     "$$p_y(y)=p_x(x)|detJ_{y \\to c}|$$\n",
-    "\n",
-    "\n",
     "\n"
    ],
    "metadata": {
@@ -142,6 +141,7 @@
   {
    "cell_type": "markdown",
    "source": [
+    "(KL-Divergence)=\n",
     "## Kullback-Leibler Divergence\n",
     "\n",
     "aka relative entropy\n",
