ci and typo fix

--- a/Mathematical_Statistics/Mathematical Statistics.ipynb
+++ b/Mathematical_Statistics/Mathematical Statistics.ipynb
@@ -344,8 +344,19 @@
     "\n",
     "for $\\sigma^2$\n",
     "\n",
-    "$$\\frac{(n-1)s^2}{\\sigma^2} \\sim \\chi^2_u$$ by students theorem\n"
+    "$$\\frac{(n-1)s^2}{\\sigma^2} \\sim \\chi^2_u$$ by students theorem\n",
+    "\n",
+    "Welch showed for large $n$\n",
+    "\n",
+    "$$\\frac{\\bar{x}-\\bar{y}-(\\mu_x-\\mu_y)}{\\sqrt{\\frac{s_x^2}{n}+\\frac{s_y^2}{m}}}\\sim T$$"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
    "metadata": {
     "collapsed": false
    }
