--- a/Time_Series/Stationarity.ipynb
+++ b/Time_Series/Stationarity.ipynb
@@ -26,7 +26,7 @@
     "\n",
     "\n",
     "\n",
-    "### weak stationarity\n",
+    "### Weak Stationarity\n",
     "\n",
     "1. the mean function is constant over time\n",
     "2. $\\gamma_{t,t-k}=\\gamma_{0,k}$\n"
