MARS, eliminate additive models and add to adaptive basis functions, update toc

--- a/Adaptive_Basis_Functions/Adaptive Basis Functions.ipynb
+++ b/Adaptive_Basis_Functions/Adaptive Basis Functions.ipynb
@@ -312,33 +312,55 @@
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "cell_type": "markdown",
    "source": [
-    "\n"
+    "# Generalized Additive Models\n",
+    "\n",
+    "has the form\n",
+    "\n",
+    "$$f(x) - \\alpha + f_1(x_1) + \\cdots + f_D(x_D)$$\n",
+    "\n",
+    "each $f_j$ can be modeled by some scatterplot smoother and $f(x)$ can be mapped to $p(y|x)$ using a link function\n",
+    "\n",
+    "it is typical to use smoothing splines for $f_j$ in this case the objective becomes\n",
+    "\n",
+    "$$J(\\alpha, f_1, \\cdots , f_d) = \\sum_{i=1}^N \\left(y_i - \\alpha - \\sum_{j=1}^D f_j(x_{ij}) \\right)^2 + \\sum_{j=1}^D \\lambda_j \\int f_j^{''}(t_j)^2dt_j$$ where $\\lambda_j$ is the strength of the regularizer for $f_j$"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
-   "cell_type": "code",
+   "cell_type": "markdown",
    "source": [
+    "# Multivariate Adaptive Regression Splines (MARS)\n",
     "\n",
-    "\n"
+    "extends GAM's by allowing for interaction effects with an ANOVA like decomposition\n",
+    "\n",
+    "$$f(x)=\\beta_0+\\sum_{j=1}^Df_j(x_j)+\\sum_{j,k}f_{jk}(x_j,x_k)+\\sum_{j,k,l}f_{jkl}(x_j,x_k,x_l)+\\cdots$$\n",
+    "\n",
+    "mars uses a greedy search to decide which variables to add, fitting tensor product basis of regression splines to represent multidimensional regression functions EG for 2D input\n",
+    "\n",
+    "$$f(x_1,x_2)=\\beta_0+\\sum_m\\beta_{1m}(x_1-t_{1m})+\\sum_m\\beta_{2m}(t_{2m}-x_2)+\\sum_m\\beta_(12m(x_1-t_{1m})+(t_{2m}-x_2)+$$\n",
+    "\n",
+    "to create function start with candidate set of basis functions of form\n",
+    "\n",
+    "$$\\mathcal{C} = \\{(x_j-t)_+,(t-x_j)_+:t \\in \\{x_{1j},\\cdots,x_{mj},j=1,\\cdots ,D\\}\\}$$\n",
+    "\n",
+    "these are 1d linear splines where knots are at all observed values of the variables, consider both reflecting pairs (splines sloping up and splines sloping down)\n",
+    "\n",
+    "let $\\mathcal{M}$ be the current set of basis functions we initialize with $\\mathcal{M}=\\{1\\}$ and to create a new basis function pair multiply by an $h_m\\in \\mathcal{M}$ with one of the reflecting pairs in $\\mathcal{C}$\n",
+    "\n",
+    "eg say initially we get $f(x)=25-4(x_1-5)_++20(5-x_1)_+$ obtained by multiplying $h_0(x)=1$ with a reflecting pair involving $x_1$ with knot $t=5$ this pair is added to $\\mathcal{M}$ at the next step we might have\n",
+    "\n",
+    "$$f(x)=2-2(x_1-5)_+ +3(5-x_1)_+-(x_2-10) \\times (5-x_1)+(-1.2(10-x_2)\\times (5-x_1)_+ $$ obtained by multiplying $(5-x_1)+$ from $\\mathcal{M}$ by new reflecting pair $(x_2-10)_+$ and $(10-x_2)_+$\n",
+    "\n",
+    "\n",
+    "continue until model gets pretty big then prune eliminating basis function that causes smallest increase in residual error until CV error stops improving."
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "execution_count": null,
-   "outputs": []
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
