important probability inequalities

--- a/Probability_Distributions_Review/Probability Review.ipynb
+++ b/Probability_Distributions_Review/Probability Review.ipynb
@@ -177,6 +177,45 @@
    "metadata": {
     "collapsed": false
    }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Markov Inequality\n",
+    "\n",
+    "let $x$ be a random variable and $u(x)$ be a non negative function than for any $c>0$\n",
+    "\n",
+    "$$p(u(x) \\geq c) \\leq \\frac{\\mathbb{E}[u(x)]}{c}$$"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Chebyshevs Inequality\n",
+    "\n",
+    "let $x$ be a random variable with mean $\\mu$ and variance $\\sigma^2<\\infty$ then\n",
+    "\n",
+    "$$p(|x-\\mu|) \\geq k\\sigma) \\leq \\frac{1}{k^2}$$"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Jensens Inequality\n",
+    "\n",
+    "if $\\phi(x)$ is convex on an interval $I$ and the support of $x$  is in $I$\n",
+    "\n",
+    "$$\\phi(\\mathbb{E}[x]) \\leq \\mathbb{E}(\\phi(x)]$$ provided the expecations exist"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
