Gradient boosting math

--- a/Adaptive_Basis_Functions/Adaptive Basis Functions.ipynb
+++ b/Adaptive_Basis_Functions/Adaptive Basis Functions.ipynb
@@ -361,6 +361,97 @@
    "metadata": {
     "collapsed": false
    }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Boosting\n",
+    "\n",
+    "Boosting attempts to solve\n",
+    "\n",
+    "$$\\underset{f}{min}\\sum_{i=1}^{N}L(y_i,f(x_i))$$ for some loss function $L$\n",
+    "\n",
+    "1: Squared Error loss\n",
+    "\n",
+    "if we use squared error loss the optimal estimate is given by\n",
+    "\n",
+    "$$f^*(x)=\\underset{f(x)}{argmin}\\;\\mathbb{E}_{y|x}\\left[(Y-f(x))^2\\right]=\\mathbb{E}[Y|x]$$\n",
+    "\n",
+    "2. log/exponential loss\n",
+    "\n",
+    "for binary classificatoin use logloss (the convex upper bound of 0-1 loss) the optimal estimate is\n",
+    "\n",
+    "$$f^*(x)=\\frac{1}{2}log\\frac{p(\\tilde{y}=1|x)}{p(\\tilde{y}=-1|x)}$$\n",
+    "\n",
+    "an alternate convex upper bound is log loss ($exp(-\\tilde{y}f)$ whose optimal estimate is $e^{2f(x)}$\n",
+    "\n",
+    "in both cases we try to approzimate (half) the log odds ratio, since finding optimal $f$ is hard its tackled sequentially, first we initialize\n",
+    "\n",
+    "$$f_0(x)=\\underset{\\gamma}{argmin}\\sum_{i=1}^NL(y_i, f_{m-1}(x_i)+\\beta\\phi(x_i;\\gamma))$$\n",
+    "\n",
+    "we then set\n",
+    "\n",
+    "$$f_m(x)=f_{m-1}(x)+\\beta_m\\phi(x;\\gamma_m)$$\n",
+    "\n",
+    "we dont go back and adjust earlier parameters, thats why its forward stagewise addive modelling\n",
+    "\n",
+    "in practice better test set performance can be obtained by performing partial updates of the form\n",
+    "\n",
+    "$$f_m(x)=f_{m-1}(x)+\\mathcal{v}\\beta_m\\phi(x;\\gamma_m)$$ where shrinkage parameter $0<\\mathcal{v}\\leq 1$ typically set it to small value $\\mathcal{v}=0.1$"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# L2 Boosting\n",
+    "\n",
+    "suppose we used squared error loss then at step $m$ the loss has the form\n",
+    "\n",
+    "$$L(y_i;f_{m-1}(x)+\\beta \\phi(x_i,\\gamma))=(r_{im}-\\phi(x_i;\\gamma))^2$$\n",
+    "\n",
+    "where $r_{im} \\triangleq y_i-f_{m-1}(x_i)$ is the current residual we can use a weak learner to learn $r_m$"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Gradient Boosting\n",
+    "\n",
+    "we try to minimize $\\hat{f}=\\underset{f}{argmin}\\;L(f)$ where $f=(f(x_1),\\cdots , f(x_N))$ are the parameters we solve with stagewise gradient descent at stage $m$ let $g_m$ be the gradient of $L(f)$ evaluated at $f=f_{m-1}$\n",
+    "\n",
+    "$$g_{im}=\\left[\\frac{\\partial L(y_i,f(x_i))}{\\partial f(x_i)}\\right]_{f=f_{m-1}}$$\n",
+    "\n",
+    "![Loss Function Table](\"loss_function_table.jpg\")\n",
+    "\n",
+    "we then make an update $f_m=f_{m-1}-\\rho_mg_m$ where $\\rho_m$ is the step length chosen by $\\rho_m=\\underset{\\rho}{argmin}L(f_{m-1}-\\rho g_m)$ in this form it only optimizes $f$ at a fixed set of $N$ points we can modify the algorithm by fitting a weak learner to approximate the negative gradient signal\n",
+    "\n",
+    "$$\\gamma_m=\\underset{\\gamma}{argmin}\\sum_{i=1}^N (-g_{im}-\\phi(x_i;\\gamma))^2$$\n",
+    "\n",
+    "![Gradient Boosting](\"gradient_boosting_algo.jpg\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
