causal inference, mcmc, add normal dist

--- a/Adaptive_Basis_Functions/Adaptive Basis Functions.ipynb
+++ b/Adaptive_Basis_Functions/Adaptive Basis Functions.ipynb
@@ -452,6 +452,94 @@
      "name": "#%%\n"
     }
    }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Gradient Boosting\n",
+    "\n",
+    "we try to minimize $\\hat{f}=\\underset{f}{argmin}\\;L(f)$ where $f=(f(x_1),\\cdots , f(x_N))$ are the parameters we solve with stagewise gradient descent at stage $m$ let $g_m$ be the gradient of $L(f)$ evaluated at $f=f_{m-1}$\n",
+    "\n",
+    "$$g_{im}=\\left[\\frac{\\partial L(y_i,f(x_i))}{\\partial f(x_i)}\\right]_{f=f_{m-1}}$$\n",
+    "\n",
+    "![Loss Function Table](\"loss_function_table.jpg\")\n",
+    "\n",
+    "we then make an update $f_m=f_{m-1}-\\rho_mg_m$ where $\\rho_m$ is the step length chosen by $\\rho_m=\\underset{\\rho}{argmin}L(f_{m-1}-\\rho g_m)$ in this form it only optimizes $f$ at a fixed set of $N$ points we can modify the algorithm by fitting a weak learner to approximate the negative gradient signal\n",
+    "\n",
+    "$$\\gamma_m=\\underset{\\gamma}{argmin}\\sum_{i=1}^N (-g_{im}-\\phi(x_i;\\gamma))^2$$\n",
+    "\n",
+    "![Gradient Boosting](\"gradient_boosting_algo.jpg\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Gradient Boosting\n",
+    "\n",
+    "we try to minimize $\\hat{f}=\\underset{f}{argmin}\\;L(f)$ where $f=(f(x_1),\\cdots , f(x_N))$ are the parameters we solve with stagewise gradient descent at stage $m$ let $g_m$ be the gradient of $L(f)$ evaluated at $f=f_{m-1}$\n",
+    "\n",
+    "$$g_{im}=\\left[\\frac{\\partial L(y_i,f(x_i))}{\\partial f(x_i)}\\right]_{f=f_{m-1}}$$\n",
+    "\n",
+    "![Loss Function Table](\"loss_function_table.jpg\")\n",
+    "\n",
+    "we then make an update $f_m=f_{m-1}-\\rho_mg_m$ where $\\rho_m$ is the step length chosen by $\\rho_m=\\underset{\\rho}{argmin}L(f_{m-1}-\\rho g_m)$ in this form it only optimizes $f$ at a fixed set of $N$ points we can modify the algorithm by fitting a weak learner to approximate the negative gradient signal\n",
+    "\n",
+    "$$\\gamma_m=\\underset{\\gamma}{argmin}\\sum_{i=1}^N (-g_{im}-\\phi(x_i;\\gamma))^2$$\n",
+    "\n",
+    "![Gradient Boosting](\"gradient_boosting_algo.jpg\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
