--- a/Probability_Distributions_Review/Distributions.ipynb
+++ b/Probability_Distributions_Review/Distributions.ipynb
@@ -55,6 +55,35 @@
    "metadata": {
     "collapsed": false
    }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Normal\n",
+    "\n",
+    "$$\\mathbb{N}(x|\\mu,\\theta^2)\\triangleq \\frac{1}{\\sqrt{2\\pi \\sigma^2}}e^{-\\frac{1}{2\\sigma^2}(x-\\mu)^2}$$\n",
+    "\n",
+    "precision is the inverse variance $\\lambda=\\frac{1}{\\sigma^2}$"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Multivariate Normal"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
