--- a/Probability_Distributions_Review/Distributions.ipynb
+++ b/Probability_Distributions_Review/Distributions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -12,7 +12,8 @@
     "import plotly.express as px\n",
     "import numpy as np\n",
     "from plotly.offline import init_notebook_mode, iplot\n",
-    "from ipywidgets import interact"
+    "from ipywidgets import interact\n",
+    "import scipy.stats as stat"
    ]
   },
   {
@@ -125,6 +126,50 @@
    ],
    "metadata": {
     "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "interactive(children=(IntSlider(value=50, description='loc'), FloatSlider(value=2.0, description='scale', max=…",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "b366aa6f253a4361b3b930b1d4aa482e"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "<function __main__.view_normal(loc, scale)>"
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def pdf_normal(loc, scale,):\n",
+    "    x_val = np.arange(loc-(3.5*scale), loc+(3.5*scale), 0.01)\n",
+    "    pdf = list(map(lambda x: stat.norm(loc, scale).pdf(x), x_val))\n",
+    "    return x_val, pdf\n",
+    "\n",
+    "def view_normal(loc, scale):\n",
+    "    x_val, pdf = pdf_normal(loc=loc, scale=scale)\n",
+    "    fig = px.scatter(x=x_val, y=pdf, title='Normal Distribution')\n",
+    "    iplot(fig)\n",
+    "interact(view_normal, loc=(0,100,1), scale=(0,5,.01))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    }
   },
   {
