gaussian model section MVN, various edits

--- a/Probability_Distributions_Review/Distributions.ipynb
+++ b/Probability_Distributions_Review/Distributions.ipynb
@@ -13,7 +13,8 @@
     "import numpy as np\n",
     "from plotly.offline import init_notebook_mode, iplot\n",
     "from ipywidgets import interact\n",
-    "import scipy.stats as stat"
+    "import scipy.stats as stat\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -130,15 +131,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "outputs": [
     {
      "data": {
-      "text/plain": "interactive(children=(IntSlider(value=50, description='loc'), FloatSlider(value=2.0, description='scale', max=…",
+      "text/plain": "interactive(children=(IntSlider(value=50, description='loc'), FloatSlider(value=5.0, description='scale', max=…",
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "b366aa6f253a4361b3b930b1d4aa482e"
+       "model_id": "68ee31b5afa94b78b492c0fe70169988"
       }
      },
      "metadata": {},
@@ -148,7 +149,7 @@
      "data": {
       "text/plain": "<function __main__.view_normal(loc, scale)>"
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +164,7 @@
     "    x_val, pdf = pdf_normal(loc=loc, scale=scale)\n",
     "    fig = px.scatter(x=x_val, y=pdf, title='Normal Distribution')\n",
     "    iplot(fig)\n",
-    "interact(view_normal, loc=(0,100,1), scale=(0,5,.01))"
+    "interact(view_normal, loc=(0,100,1), scale=(0,10,.01))\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -175,7 +176,11 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Multivariate Normal"
+    "# Multivariate Normal\n",
+    "\n",
+    "the pdf of the multivariate normal is given by\n",
+    "\n",
+    "$$\\mathbb{N}(x|\\mu,\\sigma)\\triangleq\\frac{1}{(2\\pi)^{\\frac{D}{2}}|\\Sigma|^{\\frac{1}{2}}} e^{\\left[-\\frac{1}{2}(x-\\mu)^T\\Sigma^{-1}(x-\\,u)\\right]}$$"
    ],
    "metadata": {
     "collapsed": false
@@ -183,7 +188,10 @@
   },
   {
    "cell_type": "markdown",
-   "source": [],
+   "source": [
+    "# Beta\n",
+    "\n"
+   ],
    "metadata": {
     "collapsed": false
    }
