--- a/Probability_Distributions_Review/Probability Review.ipynb
+++ b/Probability_Distributions_Review/Probability Review.ipynb
@@ -37,10 +37,10 @@
   {
    "cell_type": "markdown",
    "source": [
-    "(Bayes-Rule)=\n",
+    "\n",
     "## Bayes Rule\n",
     "\n",
-    "$$p(X=x|Y=y)=\\frac{p(X=x)p(Y=y)}{p(Y=y)})=\\frac{p(X=x)pY=y|X=x)}{\\sum_{x^\\prime{}}p(X=x^\\prime)p(Y=y|X=x^\\prime)} $$\n"
+    "$$p(X=x|Y=y)=\\frac{p(X=x)p(Y=y)}{p(Y=y)})=\\frac{p(X=x)p(Y=y|X=x)}{\\sum_{x^\\prime{}}p(X=x^\\prime)p(Y=y|X=x^\\prime)} $$\n"
    ],
    "metadata": {
     "collapsed": false,
